--- a/package.json
+++ b/package.json
@@ -1,29 +1,35 @@
 {
-  "name": "lms",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev -p 8000",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "clsx": "^1.2.1",
-    "next": "12.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.6.0"
-  },
-  "devDependencies": {
-    "@types/node": "18.11.4",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
-    "autoprefixer": "^10.4.12",
-    "eslint": "8.26.0",
-    "eslint-config-next": "12.3.1",
-    "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.1",
-    "typescript": "4.8.4"
-  }
+	"name": "lms",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev -p 8000",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"canvas": "^2.10.2",
+		"clsx": "^1.2.1",
+		"jsxgraph": "^1.4.6",
+		"next": "12.3.1",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-icons": "^4.6.0",
+		"react-markdown": "^8.0.3",
+		"rehype-katex": "^6.0.2",
+		"remark-gfm": "^3.0.1",
+		"remark-math": "^5.1.1"
+	},
+	"devDependencies": {
+		"@types/node": "18.11.4",
+		"@types/react": "18.0.21",
+		"@types/react-dom": "18.0.6",
+		"autoprefixer": "^10.4.12",
+		"eslint": "8.26.0",
+		"eslint-config-next": "12.3.1",
+		"postcss": "^8.4.18",
+		"tailwindcss": "^3.2.1",
+		"typescript": "4.8.4"
+	}
 }
