--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@matejmazur/react-katex": "^3.1.3",
 		"canvas": "^2.10.2",
 		"clsx": "^1.2.1",
 		"jsxgraph": "^1.4.6",
+		"katex": "^0.16.3",
 		"next": "12.3.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
