--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"clsx": "^1.2.1",
 		"jsxgraph": "^1.4.6",
 		"katex": "^0.16.3",
+		"mdx-bundler": "9.0.1",
 		"next": "12.3.1",
 		"react": "^17.0.2",
 		"react-dnd": "^16.0.1",
@@ -21,7 +22,8 @@
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.7.1",
 		"react-markdown": "^8.0.3",
-		"rehype-katex": "^6.0.2",
+		"rehype-katex": "^6.0.3",
+		"rehype-mathjax": "^4.0.3",
 		"rehype-raw": "^6.1.1",
 		"remark-gfm": "^3.0.1",
 		"remark-math": "^5.1.1"
@@ -30,6 +32,7 @@
 		"@types/node": "18.11.4",
 		"@types/react": "18.0.21",
 		"@types/react-dom": "18.0.6",
+		"@types/react-latex": "^2.0.0",
 		"autoprefixer": "^10.4.12",
 		"eslint": "8.26.0",
 		"eslint-config-next": "12.3.1",
