--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
 		"@types/react-dom": "18.0.6",
 		"@types/react-latex": "^2.0.0",
 		"autoprefixer": "^10.4.12",
-		"eslint": "8.26.0",
+		"eslint": "^8.26.0",
 		"eslint-config-next": "12.3.1",
+		"eslint-plugin-react": "^7.33.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
 		"postcss": "^8.4.18",
 		"tailwindcss": "^3.2.1",
 		"typescript": "4.8.4"
