--- a/package.json
+++ b/package.json
@@ -28,14 +28,12 @@
 	},
 	"devDependencies": {
 		"@types/node": "18.11.4",
-		"@types/react": "18.0.21",
-		"@types/react-dom": "18.0.6",
+		"@types/react": "^18.2.38",
+		"@types/react-dom": "^18.2.17",
 		"@types/react-latex": "^2.0.0",
 		"autoprefixer": "^10.4.12",
 		"eslint": "^8.26.0",
 		"eslint-config-next": "12.3.1",
-		"eslint-plugin-react": "^7.33.2",
-		"eslint-plugin-react-hooks": "^4.6.0",
 		"postcss": "^8.4.18",
 		"tailwindcss": "^3.2.1",
 		"typescript": "4.8.4"
