--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@matejmazur/react-katex": "^3.1.3",
+		"@typescript-eslint/eslint-plugin": "^6.12.0",
 		"canvas": "^2.10.2",
 		"clsx": "^1.2.1",
 		"jsxgraph": "^1.4.6",
