--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@typescript-eslint/eslint-plugin": "^6.12.0",
 		"canvas": "^2.10.2",
 		"clsx": "^1.2.1",
+		"esbuild": "^0.19.7",
 		"jsxgraph": "^1.4.6",
 		"katex": "^0.16.3",
 		"mdx-bundler": "9.0.1",
